# linuxdeploy-desktopfile

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
.github/workflows/: main.yml
ci/: test-coverage.sh
include/linuxdeploy/desktopfile/: desktopexecentrytokenizer.h  desktopfile.h  desktopfileentry.h  exceptions.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  argh.cpp  desktopexecentrytokenizer.cpp  desktopfile.cpp  desktopfileentry.cpp  desktopfilereader.cpp  desktopfilereader.h  desktopfilewriter.cpp  desktopfilewriter.h  util.h
tests/: CMakeLists.txt  main.cpp  test_desktopexecentrytokenizer.cpp  test_desktopfile.cpp  test_desktopfile_conformance.cpp  test_desktopfileentry.cpp  test_desktopfilereader.cpp  test_desktopfilewriter.cpp
